@startuml
class Activity [[java:br.upe.acs.model.Activity]] {
	-id: Long
	-axle: AxleEnum
	-description: String
	-evaluationMethods: String
	-workloadMax: int
	-workloadCertificate: Integer
}
class Certificate {
}
Activity -> "*" Certificate : certificates
class Address [[java:br.upe.acs.model.Address]] {
	-id: Long
	-cep: String
	-street: String
	-district: String
	-city: String
	-uf: String
	-number: int
	-complement: String
}
class User {
}
Address -> "*" User : users
class Certificate [[java:br.upe.acs.model.Certificate]] {
	-id: Long
	-title: String
	-note: String
	-startDate: Date
	-endDate: Date
	-workload: float
	-certificate: byte[]
	-status: CertificateStatusEnum
}
class Request {
}
Certificate -> "1" Request : request
class Activity {
}
Certificate --> "1" Activity : activity
class Course [[java:br.upe.acs.model.Course]] {
	-id: Long
	-name: String
	-acronym: String
	-additionalHours: int
}
class User {
}
Course --> "*" User : users
class Request [[java:br.upe.acs.model.Request]] {
	-id: Long
	-createAt: Date
	-note: String
	-sentAt: Date
	-token: String
	-archived: boolean
	-signedFile: byte[]
	-status: RequestStatusEnum
}
class User {
}
Request --> "1" User : user
class Certificate {
}
Request --> "*" Certificate : certificates
class User [[java:br.upe.acs.model.User]] {
	-id: Long
	-fullName: String
	-cpf: String
	-enrollment: String
	-period: int
	-phone: String
	-email: String
	-password: String
	-verificationCode: String
	-verified: boolean
	-hoursEnsino: float
	-hoursExtensao: float
	-hoursGestao: float
	-hoursPesquisa: float
	-enabled: boolean
	-role: RoleEnum
	+getAuthorities(): Collection<? extends GrantedAuthority>
	+getUsername(): String
	+isAccountNonExpired(): boolean
	+isAccountNonLocked(): boolean
	+isCredentialsNonExpired(): boolean
	+isEnabled(): boolean
}
class Request {
}
User --> "*" Request : requests
class Address {
}
User --> "1" Address : address
class Course {
}
User --> "1" Course : course
interface UserDetails {
}
UserDetails <|.. User
@enduml